# Pragma-Market

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: API_SURFACE.md
examples/: polymarket_style_bot.py  simple_agent.py  strategy_agent.py
pragma_market/: __init__.py  cli.py  client.py  exceptions.py  markets.py  orders.py  templates.py  utils.py  wallet.py
tests/: test_cli.py
